Agregue readme.md

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
           <form class="popup__form" id="new-card-form">
             <input
               class="popup__input popup__input_type_card-name"
+              id="card-name-input"
               name="place-name"
               placeholder="Título"
               required
@@ -86,6 +87,7 @@
             />
             <input
               class="popup__input popup__input_type_url"
+              id="card-url-input"
               name="link"
               placeholder="Enlace a la imagen"
               required
