--- a/index.html
+++ b/index.html
@@ -148,6 +148,6 @@
       </li>
     </template>
 
-    <script src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
